--- a/Template.html
+++ b/Template.html
@@ -167,17 +167,17 @@ AND Glenn Cheng-->
       <h2>Colours</h2>
 
       <p>
-        The colour palette is orange, light green, and greys.
+        The colour palette are light saturated colours.
       </p>
 
-      <div class="colorpalette lightbrown">rgb(178,100,95)</div>
-      <div class="colorpalette lightyellow">rgb(242,255,138)</div>
-      <div class="colorpalette lightred">rgb(255,98,87)</div>
-      <div class="colorpalette lightblue">rgb(153,178,204)</div>
-      <div class="colorpalette blue">rgb(52,115,178)</div>
+      <div class="colorpalette blue">rgb(76,118,163)</div>
+      <div class="colorpalette darkblue">rgb(18,63,112)</div>
+      <div class="colorpalette lightblue">rgb(121,214,214)</div>
+      <div class="colorpalette lightorange">rgb(219,111,80)</div>
+      <div class="colorpalette lightred">rgb(163,50,41)</div>
 
       <p>
-        Background gray is rgb(244,244,244).
+        Background is white.
       </p>
 
     </section>
