Changed some styles

--- a/Template.html
+++ b/Template.html
@@ -70,15 +70,15 @@ AND Glenn Cheng-->
         
         
           <div class="input-wrapper">
-            <label class="form" for="form-name">Default Form:</label>
-            <input class="form" type="text" id="form-name" placeholder="Default Form">
+            <label class="form" for="form-name">Name:</label>
+            <input class="form" type="text" id="form-name" placeholder="John Smith">
           </div>
 
           <div class="input-wrapper">
-            <textarea class="form" id="form-comment" placeholder="Default Form"></textarea>
+            <textarea class="form" id="form-comment" placeholder="Please place your comment here"></textarea>
        </div>
 
-        <input class="form-submit" type="submit" value="DEFAULT FORM">
+        <input class="form-submit" type="submit" value="Submit">
 
 
       </form>
