-Added Html files of Home, Contact, Order, Products -Added Css files of home, contact, order, products -Added responsive to all navigation bars. -Added grid structure on all pages
THINGS NEED TO DO
-Html of Order and Contact requires attention in grid structure of 'form'
-Images on all pages are still nonresponsive.
-adding 'href' to link the pages

IN THE PROCESS OF DOING
-removing excess comments and cleaning up css files

--- a/Template.html
+++ b/Template.html
@@ -110,6 +110,8 @@ AND Glenn Cheng-->
 
         <p class="textual">Default Textual, Etiam sit amet sem vehicula, efficitur eros faucibus, dignissim odio. <a class="important" href="#">Duis diam sem, malesuada</a> non augue quis, viverra lacinia turpis. Morbi in vehicula eros, quis vestibulum libero.</p>
 
+        <p class="textual">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean vel orci tristique nisi feugiat mollis non id nisl. Etiam pretium turpis a semper mollis. Nulla sit amet elementum sem, mollis finibus risus. Ut volutpat nibh scelerisque nulla auctor, vel pellentesque eros ornare. Vivamus feugiat est a enim sodales, lobortis suscipit tellus dapibus. Quisque nulla purus, auctor et laoreet ac, molestie at turpis. Pellentesque sollicitudin metus at tortor tempor, congue venenatis tortor vestibulum. In erat sem, interdum et volutpat id, vehicula eget magna. Suspendisse sed sodales arcu. Praesent vestibulum cursus interdum. Mauris feugiat, urna in venenatis blandit, lectus metus fermentum turpis, ac convallis nibh est auctor augue. Pellentesque et sagittis leo, in faucibus diam. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
     </section>
 
     <!-- IMAGE element-->
@@ -175,11 +177,13 @@ AND Glenn Cheng-->
             <a class="navigation" href="#">Home</a>
           </div>
           <div class="col-2of10">
-            <a class="navigation" href="#">Flavour</a>
+            <a class="navigation" href="#">Products</a>
           </div>
+          <!--temporary removed
           <div class="col-2of10">
-            <a class="navigation" href="#">Menu</a>
+            <a class="navigation" href="#"></a>
           </div>
+           -->
           <div class="col-2of10">
             <a class="navigation" href="#">Order</a>
           </div>
