added link between pages, navigation bar now works

--- a/Order.html
+++ b/Order.html
@@ -40,8 +40,8 @@ AND Glenn Cheng-->
 
   <div class="grid">
           <figure>
-            <img width="300" height="300" alt="The Current Event" src="">
-            <figcaption>Current Event</figcaption>
+            <img width="300" height="300" alt="Logo" src="">
+            <figcaption>Logo</figcaption>
           </figure>
   </div>
  
@@ -59,10 +59,10 @@ AND Glenn Cheng-->
           position navigation across the top accordingly
           -->  
           <div class="col-2of10">
-            <a class="navigation" href="#">Home</a>
+            <a class="navigation" href="Home.html">Home</a>
           </div>
           <div class="col-2of10">
-            <a class="navigation" href="#">Products</a>
+            <a class="navigation" href="Products.html">Products</a>
           </div>
           <!--temporary removed
           <div class="col-2of10">
@@ -70,10 +70,10 @@ AND Glenn Cheng-->
           </div>
            -->
           <div class="col-2of10">
-            <a class="navigation" href="#">Order</a>
+            <a class="navigation" href="Order.html">Order</a>
           </div>
           <div class="col-2of10">
-            <a class="navigation" href="#">Contact</a>
+            <a class="navigation" href="Contact.html">Contact</a>
           </div>
         </nav>
     </section>
