commented out unused code in contact.css and fixed much or the forms on both Order.html and Products.html.

--- a/Home.html
+++ b/Home.html
@@ -40,8 +40,8 @@ AND Glenn Cheng-->
 
   <div class="grid">
           <figure>
-            <img width="300" height="300" alt="The Current Event" src="">
-            <figcaption>Company Logo</figcaption>
+            <img width="300" height="300" alt="LOGO" src="">
+            <figcaption>o</figcaption>
           </figure>
   </div>
  
@@ -88,8 +88,8 @@ AND Glenn Cheng-->
 
       <div class="grid">
           <figure>
-            <img width="600" height="250" alt="Side Event" src="">
-            <figcaption>Recent Event/Update</figcaption>
+            <img width="700" height="250" alt="Main Event/Update" src="">
+            <figcaption></figcaption>
           </figure>
         
 
