--- a/Contact.html
+++ b/Contact.html
@@ -41,7 +41,7 @@ AND Glenn Cheng-->
   <div class="grid">
           <figure>
             <img width="300" height="300" alt="Logo" src="">
-            <figcaption>Logo</figcaption>
+            <figcaption></figcaption>
           </figure>
   </div>
  
@@ -83,18 +83,18 @@ AND Glenn Cheng-->
         This is the first column
     -->    
 <div class="grid">
-    <div class="col-R5of10">
-    <div class="col-R5of10">
-            <h4>Title</h4>
+    <div class="colR-5of10">
+    <div class="colR-5of10">
+            <h3 class="sideTitle">Title</h3>
 
             <p>Cras in mi at felis aliquet congue.Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien</p>
     </div>
    </div>
 
-   <div class="col-R5of10">
+   <div class="colR-5of10">
             <figure>
             <img width="550" height="300" alt="Google Map" src="">
-            <figcaption>MAP</figcaption>
+            <figcaption></figcaption>
           </figure>
    </div>
 </div>
@@ -110,24 +110,24 @@ AND Glenn Cheng-->
           <div class="input-wrapper">
         -->
           <div class="grid">
-            <div class="col-R5of10">
+            <div class="colR-5of10">
               <label class="form" for="form-name">First Name:</label>
               <input class="form" type="text" id="form-name" placeholder="John">
             </div>
-            <div class="col-R5of10">
+            <div class="colR-5of10">
               <label class="form" for="form-name">Last Name:</label>
               <input class="form" type="text" id="form-name" placeholder="Doe">
             </div>
           </div>
           
         <div class="grid">
-          <div class="col-R7of10">
+          <div class="colR-7of10">
             <label class="form" for="form-name">Email</label>
               <input class="form" type="text" id="form-name" placeholder="johnny@something.com">
           </div>
         </div>
         <div class="grid">
-          <div class="col-R7of10">
+          <div class="colR-7of10">
             <label class="form" for="form-name">Subject</label>
               <input class="form" type="text" id="form-name" placeholder="Topic">
         </div>
