Added responsive on logo and mainEvent image.

--- a/Home.html
+++ b/Home.html
@@ -40,8 +40,8 @@ AND Glenn Cheng-->
 
   <div class="grid">
           <figure>
-            <img width="300" height="300" alt="LOGO" src="">
-            <figcaption>o</figcaption>
+            <img class="logo" height="300" alt="LOGO" src="">
+            <figcaption></figcaption>
           </figure>
   </div>
  
@@ -88,7 +88,7 @@ AND Glenn Cheng-->
 
       <div class="grid">
           <figure>
-            <img width="700" height="250" alt="Main Event/Update" src="">
+            <img class="mainEvent"  height="250" alt="Main Event/Update" src="">
             <figcaption></figcaption>
           </figure>
         
