consolidated css into grid.css, cleaned up file names

--- a/Contact.html
+++ b/Contact.html
@@ -1,5 +1,5 @@
 <!--BY: Zen Henri T. dela Cruz 301122155
-AND Glenn Cheng-->
+AND Glen Cheng-->
 <!--P02: Process-->
 <!--IAT 339 Webdesign-->
 <!--Instructor: Andrew Hawryshkewich-->
@@ -25,12 +25,9 @@ AND Glenn Cheng-->
     <!--grid structure linked-->
     <link href="css/grid.css" rel="stylesheet">
 
-    <link href="css/contact.css" rel="stylesheet">
-
     <!--Call Google Fonts-->
     <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   </head>
 
 
@@ -59,10 +56,10 @@ AND Glenn Cheng-->
           position navigation across the top accordingly
           -->  
           <div class="col-2of10">
-            <a class="navigation" href="Home.html">Home</a>
+            <a class="navigation" href="index.html">Home</a>
           </div>
           <div class="col-2of10">
-            <a class="navigation" href="Products.html">Products</a>
+            <a class="navigation" href="products.html">Products</a>
           </div>
           <!--temporary removed
           <div class="col-2of10">
@@ -70,10 +67,10 @@ AND Glenn Cheng-->
           </div>
            -->
           <div class="col-2of10">
-            <a class="navigation" href="Order.html">Order</a>
+            <a class="navigation" href="order.html">Order</a>
           </div>
           <div class="col-2of10">
-            <a class="navigation" href="Contact.html">Contact</a>
+            <a class="navigation" href="contact.html">Contact</a>
           </div>
         </nav>
     </section>
@@ -83,15 +80,15 @@ AND Glenn Cheng-->
         This is the first column
     -->    
 <div class="grid">
-    <div class="colR-5of10">
-    <div class="colR-5of10">
+    <div class="col-5of10">
+    <div class="col-5of10">
             <h3 class="sideTitle">Title</h3>
 
             <p>Cras in mi at felis aliquet congue.Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien</p>
     </div>
    </div>
 
-   <div class="colR-5of10">
+   <div class="col-5of10">
             <figure>
             <img width="550" height="300" alt="Google Map" src="">
             <figcaption></figcaption>
@@ -110,24 +107,24 @@ AND Glenn Cheng-->
           <div class="input-wrapper">
         -->
           <div class="grid">
-            <div class="colR-5of10">
+            <div class="col-5of10">
               <label class="form" for="form-name">First Name:</label>
               <input class="form" type="text" id="form-name" placeholder="John">
             </div>
-            <div class="colR-5of10">
+            <div class="col-5of10">
               <label class="form" for="form-name">Last Name:</label>
               <input class="form" type="text" id="form-name" placeholder="Doe">
             </div>
           </div>
           
         <div class="grid">
-          <div class="colR-7of10">
+          <div class="col-7of10">
             <label class="form" for="form-name">Email</label>
               <input class="form" type="text" id="form-name" placeholder="johnny@something.com">
           </div>
         </div>
         <div class="grid">
-          <div class="colR-7of10">
+          <div class="col-7of10">
             <label class="form" for="form-name">Subject</label>
               <input class="form" type="text" id="form-name" placeholder="Topic">
         </div>
