--- a/Template.html
+++ b/Template.html
@@ -1,5 +1,5 @@
 <!--BY: Zen Henri T. dela Cruz 301122155
-AND Glenn Cheng-->
+AND Glen Cheng-->
 <!--P02: Process-->
 <!--IAT 339 Webdesign-->
 <!--Instructor: Andrew Hawryshkewich-->
