--- a/Order.html
+++ b/Order.html
@@ -1,5 +1,5 @@
 <!--BY: Zen Henri T. dela Cruz 301122155
-AND Glenn Cheng-->
+AND Glen Cheng-->
 <!--P02: Process-->
 <!--IAT 339 Webdesign-->
 <!--Instructor: Andrew Hawryshkewich-->
@@ -25,7 +25,7 @@ AND Glenn Cheng-->
     <!--grid structure linked-->
     <link href="css/grid.css" rel="stylesheet">
 
-    <link href="css/order.css" rel="stylesheet">
+    <!-- <link href="css/order.css" rel="stylesheet"> -->
 
     <!--Call Google Fonts-->
     <link href='http://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
@@ -59,10 +59,10 @@ AND Glenn Cheng-->
           position navigation across the top accordingly
           -->  
           <div class="col-2of10">
-            <a class="navigation" href="Home.html">Home</a>
+            <a class="navigation" href="index.html">Home</a>
           </div>
           <div class="col-2of10">
-            <a class="navigation" href="Products.html">Products</a>
+            <a class="navigation" href="products.html">Products</a>
           </div>
           <!--temporary removed
           <div class="col-2of10">
@@ -70,10 +70,10 @@ AND Glenn Cheng-->
           </div>
            -->
           <div class="col-2of10">
-            <a class="navigation" href="Order.html">Order</a>
+            <a class="navigation" href="order.html">Order</a>
           </div>
           <div class="col-2of10">
-            <a class="navigation" href="Contact.html">Contact</a>
+            <a class="navigation" href="contact.html">Contact</a>
           </div>
         </nav>
     </section>
@@ -92,31 +92,31 @@ AND Glenn Cheng-->
           <div class="input-wrapper">
         -->
           <div class="grid">
-            <div class="colR-5of10">
+            <div class="col-5of10">
               <label class="form" for="form-name">First Name:</label>
               <input class="form" type="text" id="form-name" placeholder="John">
             </div>
-            <div class="colR-5of10">
+            <div class="col-5of10">
               <label class="form" for="form-name">Last Name:</label>
               <input class="form" type="text" id="form-name" placeholder="Doe">
             </div>
           </div>
           
         <div class="grid">
-          <div class="colR-7of10">
+          <div class="col-7of10">
             <label class="form" for="form-name">Address</label>
               <input class="form" type="text" id="form-name" placeholder="Mary Street">
           </div>
         </div>
         <div class="grid">
-          <div class="colR-7of10">
+          <div class="col-7of10">
             <label class="form" for="form-name">Phone</label>
               <input class="form" type="text" id="form-name" placeholder="xxx-xxx-xxxx">
         </div>
 
         </div>
         <div class="grid">
-          <div class="colR-7of10">
+          <div class="col-7of10">
             <label class="form" for="form-name">Email</label>
               <input class="form" type="text" id="form-name" placeholder="Johnny@somewhere.com">
         </div>
