Fixed up responsiveness of Products page

--- a/Template.html
+++ b/Template.html
@@ -133,21 +133,28 @@ AND Glen Cheng-->
       <figure class="intro">
       <img class="big" src="img/demoBigImage.jpg" alt="Ice Cream Cup">
       </figure>
+      <div class="grid">
+        <div class="col-3of10">
+          <figure class="gallery">
+            <img class="image" src="img/icecream.jpg" alt="Ice Cream Cup">
+            <figcaption>Chocolate Ube</figcaption>
+          </figure>
+        </div>
 
-      <figure class="gallery">
-        <img class="image" src="img/icecream.jpg" alt="Ice Cream Cup">
-        <figcaption>Chocolate Ube</figcaption>
-      </figure>
+        <div class="col-3of10">
+          <figure class="gallery">
+            <img class="image" src="img/icecream.jpg" alt="Ice Cream Cup">
+            <figcaption>Ube Macapuno</figcaption>
+          </figure>
+        </div>
 
-      <figure class="gallery">
-        <img class="image" src="img/icecream.jpg" alt="Ice Cream Cup">
-        <figcaption>Ube Macapuno</figcaption>
-      </figure>
-
-      <figure class="gallery">
-        <img class="image" src="img/icecream.jpg" alt="Ice Cream Cup">
-        <figcaption>Rocky Road</figcaption>
-      </figure>
+        <div class="col-3of10">
+          <figure class="gallery">
+            <img class="image" src="img/icecream.jpg" alt="Ice Cream Cup">
+            <figcaption>Rocky Road</figcaption>
+          </figure>
+        </div>
+      </div>
 
     </section>
 
