--- a/contact.html
+++ b/contact.html
@@ -55,21 +55,21 @@ AND Glen Cheng-->
           Here we are actually using our 10-column grid to 
           position navigation across the top accordingly
           -->  
-          <div class="col-2of10">
+          <div class="col-2of10 navitem">
             <a class="navigation" href="index.html">Home</a>
           </div>
-          <div class="col-2of10">
+          <div class="col-2of10 navitem">
             <a class="navigation" href="products.html">Products</a>
           </div>
           <!--temporary removed
-          <div class="col-2of10">
+          <div class="col-2of10 navitem">
             <a class="navigation" href="#"></a>
           </div>
            -->
-          <div class="col-2of10">
+          <div class="col-2of10 navitem">
             <a class="navigation" href="order.html">Order</a>
           </div>
-          <div class="col-2of10">
+          <div class="col-2of10 navitem">
             <a class="navigation" href="contact.html">Contact</a>
           </div>
         </nav>
@@ -106,28 +106,28 @@ AND Glen Cheng-->
         <!--temporary removed
           <div class="input-wrapper">
         -->
-          <div class="grid">
-            <div class="col-5of10">
+        <div class="grid">
+            <div class="col-3of10">
               <label class="form" for="form-name">First Name:</label>
               <input class="form" type="text" id="form-name" placeholder="John">
             </div>
-            <div class="col-5of10">
+            <div class="col-7of10">
               <label class="form" for="form-name">Last Name:</label>
               <input class="form" type="text" id="form-name" placeholder="Doe">
             </div>
-          </div>
           
-        <div class="grid">
-          <div class="col-7of10">
-            <label class="form" for="form-name">Email</label>
-              <input class="form" type="text" id="form-name" placeholder="johnny@something.com">
-          </div>
-        </div>
-        <div class="grid">
-          <div class="col-7of10">
-            <label class="form" for="form-name">Subject</label>
-              <input class="form" type="text" id="form-name" placeholder="Topic">
-        </div>
+          
+
+            <div class="col-7of10">
+              <label class="form" for="form-name">Email</label>
+                <input class="form" type="text" id="form-name" placeholder="johnny@something.com">
+            </div>
+
+
+            <div class="col-7of10">
+              <label class="form" for="form-name">Subject</label>
+                <input class="form" type="text" id="form-name" placeholder="Topic">
+            </div>
 
         </div>
         <!--
@@ -135,7 +135,9 @@ AND Glen Cheng-->
         -->
 
           <div class="grid">
-            <textarea class="form" id="form-comment" placeholder="Please place your comment here"></textarea>
+            <div class="col-8of10">
+              <textarea class="form" id="form-comment" placeholder="Please place your comment here"></textarea>
+            </div>
           </div>
 
 
