--- a/products.html
+++ b/products.html
@@ -1,20 +1,20 @@
 <!--BY: Zen Henri T. dela Cruz 301122155
-AND Glen Cheng-->
-<!--P02: Process-->
-<!--IAT 339 Webdesign-->
-<!--Instructor: Andrew Hawryshkewich-->
-<!--TA: Justin Ma-->
+  AND Glen Cheng-->
+  <!--P02: Process-->
+  <!--IAT 339 Webdesign-->
+  <!--Instructor: Andrew Hawryshkewich-->
+  <!--TA: Justin Ma-->
 
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
 
-    <!--
-      width=device-width -  sets the width of the site to the width
-                            of the device
-      initial-scale=1.0 -   sets our initial zoom level
-    -->
+<!--
+  width=device-width -  sets the width of the site to the width
+                        of the device
+  initial-scale=1.0 -   sets our initial zoom level
+-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Homepage</title>
@@ -36,98 +36,98 @@ AND Glen Cheng-->
 
     <!--DON DON's FROZEN DELIGHTS LOGO-->
 
-  <div class="grid">
-          <figure>
-            <img width="300" height="300" alt="Logo" src="">
-            <figcaption>Logo</figcaption>
-          </figure>
-  </div>
- 
+    <div class="grid">
+      <figure>
+        <img width="300" height="300" alt="Logo" src="">
+        <figcaption>Logo</figcaption>
+      </figure>
+    </div>
+
     <!-- NAVIGATION BAR element-->
 
     <section id="keygroup">
-      <!-- 
-        added the class 'grid' to our nav tag
-        to allow it to act as a grid of it's own
+    <!-- 
+      added the class 'grid' to our nav tag
+      to allow it to act as a grid of it's own
+    -->
+    <nav class="grid">
+
+        <!-- 
+        Here we are actually using our 10-column grid to 
+        position navigation across the top accordingly
+      -->  
+      <div class="col-2of10 navitem">
+        <a class="navigation " href="index.html">Home</a>
+      </div>
+      <div class="col-2of10 navitem">
+        <a class="navigation" href="products.html">Products</a>
+      </div>
+        <!--temporary removed
+        <div class="col-2of10">
+          <a class="navigation" href="#"></a>
+        </div>
       -->
-        <nav class="grid">
+      <div class="col-2of10 navitem">
+        <a class="navigation" href="order.html">Order</a>
+      </div>
+      <div class="col-2of10 navitem">
+        <a class="navigation" href="contact.html">Contact</a>
+      </div>
+    </nav>
+  </section>
 
-          <!-- 
-          Here we are actually using our 10-column grid to 
-          position navigation across the top accordingly
-          -->  
-          <div class="col-2of10">
-            <a class="navigation" href="index.html">Home</a>
-          </div>
-          <div class="col-2of10">
-            <a class="navigation" href="products.html">Products</a>
-          </div>
-          <!--temporary removed
-          <div class="col-2of10">
-            <a class="navigation" href="#"></a>
-          </div>
-           -->
-          <div class="col-2of10">
-            <a class="navigation" href="order.html">Order</a>
-          </div>
-          <div class="col-2of10">
-            <a class="navigation" href="contact.html">Contact</a>
-          </div>
-        </nav>
-    </section>
-
-    <!--MOST RECENT UPDATE!-->
-    <!--
-        This is the first column
+  <!--MOST RECENT UPDATE!-->
+  <!--
+      This is the first column
     -->    
-  <div class="grid"> <!-- Starting a different grid -->
-    <div class="col-imgof10">
-          <figure>
-            <img width="300" height="300" alt="Product Image" src="">
-            <figcaption>Vanilla (Flavour)</figcaption>
-          </figure>
+    <div class="grid"> <!-- Starting a different grid -->
+      <div class="col-2of10 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Vanilla (Flavour)</figcaption>
+        </figure>
 
-    </div>
+      </div>
 
-   <div class="col-imgof10">
-          <figure>
-            <img width="300" height="300" alt="Product Image" src="">
-            <figcaption>Vanilla (Flavour)</figcaption>
-          </figure>
+      <div class="col-2of10 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Vanilla (Flavour)</figcaption>
+        </figure>
 
-   </div>
+      </div>
 
-   <div class="col-imgof10">
-          <figure>
-            <img width="300" height="300" alt="Product Image" src="">
-            <figcaption>Vanilla (Flavour)</figcaption>
-          </figure>
+      <div class="col-2of10 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Vanilla (Flavour)</figcaption>
+        </figure>
 
-   </div>
+      </div>
 
-   <div class="col-imgof10">
-          <figure>
-            <img width="300" height="300" alt="Product Image" src="">
-            <figcaption>Vanilla (Flavour)</figcaption>
-          </figure>
+      <div class="col-2of10 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Vanilla (Flavour)</figcaption>
+        </figure>
 
-   </div>
+      </div>
 
-   <div class="col-imgof10">
-          <figure>
-            <img width="300" height="300" alt="Product Image" src="">
-            <figcaption>Vanilla (Flavour)</figcaption>
-          </figure>
+      <div class="col-2of10 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Vanilla (Flavour)</figcaption>
+        </figure>
 
-   </div>
+      </div>
 
-   <div class="col-imgof10">
-          <figure>
-            <img width="300" height="300" alt="Product Image" src="">
-            <figcaption>Vanilla (Flavour)</figcaption>
-          </figure>
+      <div class="col-2of10 thumbnail">
+        <figure>
+          <img width="300" height="300" alt="Product Image" src="http://placehold.it/300x300">
+          <figcaption>Vanilla (Flavour)</figcaption>
+        </figure>
 
-   </div>
+      </div>
 
     </div>
 
