--- a/order.html
+++ b/order.html
@@ -58,21 +58,21 @@ AND Glen Cheng-->
           Here we are actually using our 10-column grid to 
           position navigation across the top accordingly
           -->  
-          <div class="col-2of10">
+          <div class="col-2of10 navitem">
             <a class="navigation" href="index.html">Home</a>
           </div>
-          <div class="col-2of10">
+          <div class="col-2of10 navitem">
             <a class="navigation" href="products.html">Products</a>
           </div>
           <!--temporary removed
-          <div class="col-2of10">
+          <div class="col-2of10 navitem">
             <a class="navigation" href="#"></a>
           </div>
            -->
-          <div class="col-2of10">
+          <div class="col-2of10 navitem">
             <a class="navigation" href="order.html">Order</a>
           </div>
-          <div class="col-2of10">
+          <div class="col-2of10 navitem">
             <a class="navigation" href="contact.html">Contact</a>
           </div>
         </nav>
@@ -92,11 +92,11 @@ AND Glen Cheng-->
           <div class="input-wrapper">
         -->
           <div class="grid">
-            <div class="col-5of10">
+            <div class="col-3of10">
               <label class="form" for="form-name">First Name:</label>
               <input class="form" type="text" id="form-name" placeholder="John">
             </div>
-            <div class="col-5of10">
+            <div class="col-3of10">
               <label class="form" for="form-name">Last Name:</label>
               <input class="form" type="text" id="form-name" placeholder="Doe">
             </div>
@@ -150,7 +150,9 @@ AND Glen Cheng-->
         -->
 
           <div class="grid">
-            <textarea class="form" id="form-comment" placeholder="Please place your comment here"></textarea>
+            <div class="col-8of10">
+              <textarea class="form" id="form-comment" placeholder="Please place your comment here"></textarea>
+            </div>
           </div>
 
 
