Added new 12 columns grid

--- a/index.html
+++ b/index.html
@@ -55,31 +55,30 @@
           Here we are actually using our 10-column grid to 
           position navigation across the top accordingly
         -->  
-        <div class="col-2of10 navitem">
+        <div class="col-3 navitem">
           <a class="navigation" href="index.html">Home</a>
         </div>
-        <div class="col-2of10 navitem">
+        <div class="col-3 navitem">
           <a class="navigation" href="products.html">Products</a>
         </div>
           <!-- temporary removed
-          <div class="col-2of10 navitem">
+          <div class="col-3 navitem">
             <a class="navigation" href="#"></a>
           </div> -->
-          <div class="col-2of10 navitem">
+          <div class="col-3 navitem">
             <a class="navigation" href="order.html">Order</a>
           </div>
-          <div class="col-2of10 navitem">
+          <div class="col-3 navitem">
             <a class="navigation" href="contact.html">Contact</a>
           </div>
         </nav>
       </section>
 
-      <!--MOST RECENT UPDATE!-->
     <!--
         This is the first column
       -->    
       <div class="grid"> <!-- Starting a different grid -->
-        <div class="col-8of10">
+        <div class="col-9">
           <article id="mainEvent">
 
             <div class="grid">
@@ -101,7 +100,7 @@
     <!--
         This is the second column
       -->   
-      <div class="col-2of10">
+      <div class="col-3">
         <article id="sideEvent">
 
 
