added new class ("contactInfo") to resize the input bars of email and subject to be longer during downsizing the screen into mobile version.

--- a/contact.html
+++ b/contact.html
@@ -122,14 +122,14 @@ AND Glen Cheng-->
           </div>
             
           <div class="grid">              
-              <div class="col-4">
+              <div class="col-4 contactInfo">
                 <label class="form" for="form-name">Email</label>
                   <input class="form" type="text" id="form-name" placeholder="johnny@something.com">
               </div>
           </div>
             
           <div class="grid"> 
-              <div class="col-4">
+              <div class="col-4 contactInfo">
                 <label class="form" for="form-name">Subject</label>
                   <input class="form" type="text" id="form-name" placeholder="Topic">
               </div>
